
   -  regression in v2.12: option -bin didn't work if binary started with
      ORG != 0 ( i.e. DOS COM file format ); see bintest2.asm.
   -  option -mz: invalid binary was written if a .bss or .stack segment
      was followed by a segment with data; see mz2.asn.
   -  project tree changed so all generated files are located in 'build'
      subtree, and source files are in 'src'.
   
   08/19/2018, v2.12:

   Bugfixes:
   -  COMM directive: there was no check that numeric arguments 'size' or 
      'count' did fit into 32-bits; see comm06.aso.
   -  regression in v2.10-2.11: in 16-/32-bit, if a FASTCALL procedure was
      first prototyped and then defined, the assembly process may have stopped
      with error 'General Failure'; see proc9.asm.
   -  regression in v2.10-2.11, COFF format: if full segment directives were
      used and a bss segment didn't have the expected class name, jwasm may
      have calculated wrong file positions of section data and relocations;
      see coff1.asc.
   -  operator OPATTR: bit 1 (=indirect memref) and language type flags of 
      result may have been set even if operand was an invalid reference; see
      opattr9.asm.
   -  ELF format: object module may have been larger than necessary due to
      bss section sizes that were not ignored for file offset calculations.
   -  GPF might have occured if a TYPE for an undefined variable was 
      specified in an expression; see expr5.aso. 
   -  procedure equates didn't inherit the language type; subsequently, if
      used with INVOKE, the arguments might have been pushed in incorrect
      order.
   -  operator HIGHWORD didn't work correctly with negative constants.
      See SF bug #298.
   -  regression in v2.09-2.11: '!' disappeared in macro arguments if the
      argument was enclosed in angle brackets (see expans41.asm).
   -  regression in v2.05-2.11: 'push lowword offset label32' did push a
      dword instead of a word only (see lowword.asm and also the comment in